--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARCH STUDIO - Minimal Architecture &amp; Design</title>
-    <meta name="description" content="Award-winning architectural firm specializing in minimal design. Creating extraordinary spaces through thoughtful architecture, residential, commercial and renovation projects.">
-    <meta name="author" content="ARCH STUDIO" />
+    <title>Ethio Core Property - Premium Real Estate</title>
+    <meta name="description" content="Premium real estate in Ethiopia. Find your dream home, office, or investment property with Ethio Core Property.">
+    <meta name="author" content="Ethio Core Property" />
 
-    <meta property="og:title" content="ARCH STUDIO - Minimal Architecture & Design" />
-    <meta property="og:description" content="Award-winning architectural firm specializing in minimal design. Creating extraordinary spaces through thoughtful architecture." />
+    <meta property="og:title" content="Ethio Core Property - Premium Real Estate" />
+    <meta property="og:description" content="Premium real estate in Ethiopia. Find your dream home, office, or investment property." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/8jp6KAG7qJZgRp4lIs04ZYXqlhL2/social-images/social-1758046678671-Screenshot 2025-09-16 at 20.17.45.png">
 
