--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ethio Core Property - Premium Real Estate</title>
-    <meta name="description" content="Premium real estate in Ethiopia. Find your dream home, office, or investment property with Ethio Core Property.">
-    <meta name="author" content="Ethio Core Property" />
 
-    <meta property="og:title" content="Ethio Core Property - Premium Real Estate" />
-    <meta property="og:description" content="Premium real estate in Ethiopia. Find your dream home, office, or investment property." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/8jp6KAG7qJZgRp4lIs04ZYXqlhL2/social-images/social-1758046678671-Screenshot 2025-09-16 at 20.17.45.png">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ethio Core Property - Caring for What You Own</title>
+  <meta name="description"
+    content="Premium real estate in Ethiopia. Caring for what you own with integrity and excellence. Find your dream home, office, or investment property.">
+  <meta name="author" content="Ethio Core Property" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/8jp6KAG7qJZgRp4lIs04ZYXqlhL2/social-images/social-1758046678671-Screenshot 2025-09-16 at 20.17.45.png">
-  </head>
+  <meta property="og:title" content="Ethio Core Property - Caring for What You Own" />
+  <meta property="og:description"
+    content="Premium real estate in Ethiopia. Caring for what you own with integrity and excellence." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://storage.googleapis.com/gpt-engineer-file-uploads/8jp6KAG7qJZgRp4lIs04ZYXqlhL2/social-images/social-1758046678671-Screenshot 2025-09-16 at 20.17.45.png">
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Futureplanet1" />
+  <meta name="twitter:image"
+    content="https://storage.googleapis.com/gpt-engineer-file-uploads/8jp6KAG7qJZgRp4lIs04ZYXqlhL2/social-images/social-1758046678671-Screenshot 2025-09-16 at 20.17.45.png">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
